--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>HQ | BetaLabs.io</title>
+		<title>RXHG</title>
 		<meta name="description" content="Welcome to BetaLabs.io!">
 		<meta name="author" content="Hey@BetaLabs.io">
 		<meta property="og:title" content="HQ | BetaLabs.io" />
@@ -22,15 +22,15 @@
 		<canvas id="c"></canvas>
 		<div id="typewriter">
 			<h1>
-				<noscript>Work in progress!</noscript>
+				<noscript>WORK IN PROGRESS!</noscript>
 				<span class="txt-rotate" data-period="2000" data-rotate='[
-					"Work in progress",
-					"Stay tuned",
-					"Coming soon",
-					"Under construction"
+					"WORK IN PROGRESS",
+					"STAY TUNED",
+					"COMING SOON",
+					"UNDER CONSTRUCTION"
 				]'></span>
 			</h1>
-			<h2>Find me on Github <a href="https://github.com/RawbitDev" target="_blank">@RawbitDev</a></h2>
+			<h2>FOLLOW ME ON INSTAGRAM <a href="https://www.instagram.com/bmr.tt1" target="_blank">@BMR.TT1</a></h2>
 			<noscript><h3>Turn on javascript to unleash the full beauty of this site ;)</h3></noscript>
 		</div>
     </body>
