--- a/impressum.html
+++ b/impressum.html
@@ -2,7 +2,7 @@
     <head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>HQ | BetaLabs.io</title>
+		<title>CONTACT INFO</title>
 		<meta name="description" content="Welcome to BetaLabs.io!">
 		<meta name="author" content="Hey@BetaLabs.io">
 		<meta property="og:title" content="HQ | BetaLabs.io" />
@@ -19,23 +19,15 @@
     </head>
     <body>
 		<div style="margin: 5em; text-align: justify; overflow-y: visible;">
-			<h1>Legal Disclosure</h1>
-			<p>Information in accordance with Section 5 TMG</p>
+			
 			<br><h2>Contact Information</h2>
-			<p>E-Mail: <a href="mailto:Hey@BetaLabs.io">Hey@BetaLabs.io</a></p>
-			<p>Internet address: <a href="https://BetaLabs.io" target="_blank">BetaLabs.io</a></p>
-			<br><h2>Disclaimer</h2>
-			<br><h3>Accountability for content</h3>
-			<p>The contents of our pages have been created with the utmost care. However, we cannot guarantee the contents' accuracy, completeness or topicality. According to statutory provisions, we are furthermore responsible for our own content on these web pages. In this matter, please note that we are not obliged to monitor the transmitted or saved information of third parties, or investigate circumstances pointing to illegal activity. Our obligations to remove or block the use of information under generally applicable laws remain unaffected by this as per §§ 8 to 10 of the Telemedia Act (TMG).</p>
-			<br><h3>Accountability for links</h3>
-			<p>Responsibility for the content of external links (to web pages of third parties) lies solely with the operators of the linked pages. No violations were evident to us at the time of linking. Should any legal infringement become known to us, we will remove the respective link immediately.</p>
-			<br><h3>Copyright</h3>
-			<p>Our web pages and their contents are subject to German copyright law. Unless expressly permitted by law, every form of utilizing, reproducing or processing works subject to copyright protection on our web pages requires the prior consent of the respective owner of the rights. Individual reproductions of a work are only allowed for private use. The materials from these pages are copyrighted and any unauthorized use may violate copyright laws.</p>
+			<p>E-Mail: <a href="mailto:syedyaseeralirayan@gmail.com">syedyaseeralirayan@gmail.com</a></p>
+			<p>Internet address: <a href="https://www.rayxstudioz.in" target="_blank">GAMING WEBSITE</a></p>
 		</div>
 	</body>
 	<footer>
-		<a href="impressum.html" target="_blank">Impressum – Legal Disclosure</a>
-		<p>© BetaLabs.io <script type="text/javascript">document.write(new Date().getFullYear());</script> - All rights reserved.</p>
+		<a href="impressum.html" target="_blank">CONTACT</a>
+		<p>© RAYXSTUDIOZ <script type="text/javascript">document.write(new Date().getFullYear());</script> - ALL RIGHTS RESERVED.</p>
 	</footer>
 </html>
 
