--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		</div>
     </body>
 	<footer style="position: absolute;">
-		<a href="impressum.html" target="_blank">Impressum – Legal Disclosure</a>
-		<p>© BetaLabs.io <script type="text/javascript">document.write(new Date().getFullYear());</script> - All rights reserved.</p>
+		<a href="impressum.html" target="_blank">OTHER INFO-CONTACT</a>
+		<p>© RAYXSTUDIOZ <script type="text/javascript">document.write(new Date().getFullYear());</script> - ALL RIGHTS RESERVED.</p>
 		<script language="javascript" type="text/javascript" src="js/matrix.js"></script>
 		<script language="javascript" type="text/javascript" src="js/resize.js"></script>
 		<script language="javascript" type="text/javascript" src="js/typewriter.js"></script>
