--- a/impressum.html
+++ b/impressum.html
@@ -26,7 +26,7 @@
 		</div>
 	</body>
 	<footer>
-		<a href="impressum.html" target="_blank">CONTACT</a>
+		<a href="impressum.html" target="_blank">COPYRIGHT</a>
 		<p>© RAYXSTUDIOZ <script type="text/javascript">document.write(new Date().getFullYear());</script> - ALL RIGHTS RESERVED.</p>
 	</footer>
 </html>
