--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
 		</div>
     </body>
 	<footer style="position: absolute;">
-		<a href="impressum.html" target="_blank">OTHER INFO-CONTACT</a>
+		<a href="contact.html" target="_blank">OTHER INFO-CONTACT</a>
 		<p>© RAYXSTUDIOZ <script type="text/javascript">document.write(new Date().getFullYear());</script> - ALL RIGHTS RESERVED.</p>
 		<script language="javascript" type="text/javascript" src="js/matrix.js"></script>
 		<script language="javascript" type="text/javascript" src="js/resize.js"></script>
 		<script language="javascript" type="text/javascript" src="js/typewriter.js"></script>
 	</footer>
 </html>
-
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-6d92b204-b08f-487e-9a12-8ffd84309d1a" data-elfsight-app-lazy></div>
