--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</div>
     </body>
 	<footer style="position: absolute;">
-		<a href="contact.html" target="_blank">OTHER INFO-CONTACT</a>
+		<a href="contact.php" target="_blank">OTHER INFO-CONTACT</a>
 		<p>© RAYXSTUDIOZ <script type="text/javascript">document.write(new Date().getFullYear());</script> - ALL RIGHTS RESERVED.</p>
 		<script language="javascript" type="text/javascript" src="js/matrix.js"></script>
 		<script language="javascript" type="text/javascript" src="js/resize.js"></script>
