--- a/index.html
+++ b/index.html
@@ -44,3 +44,4 @@
 </html>
 <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 <div class="elfsight-app-6d92b204-b08f-487e-9a12-8ffd84309d1a" data-elfsight-app-lazy></div>
+<script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="rayxstudiozgames" data-description="Support me on Buy me a coffee!" data-message="BUY ME A COFEE" data-color="#40DCA5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
