--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 "WORK IN PROGRESS",
                 "STAY TUNED",
                 "COMING SOON",
-                "UNDER CONSTRUCTION"
+                "UNDER MAINTANANCE"
             ]'></span>
         </h1>
         <h2>FOLLOW ME ON INSTAGRAM <a href="https://www.instagram.com/bmr.tt1" target="_blank">@BMR.TT1</a></h2>
@@ -52,7 +52,7 @@
 
     <script>
         // Countdown timer
-        var countDownDate = new Date("April 10, 2024 21:30:00").getTime();
+        var countDownDate = new Date("May 20, 2024 21:30:00").getTime();
 
         var x = setInterval(function() {
             var now = new Date().getTime();
