--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RXHG</title>
+    <title>UNDER MAINTANANCE</title>
     <meta name="description" content="Welcome to BetaLabs.io!">
     <meta name="author" content="Hey@BetaLabs.io">
     <meta property="og:title" content="HQ | BetaLabs.io" />
